--- a/css/styles.css
+++ b/css/styles.css
@@ -1,843 +1,99 @@
 h1, h2, h3, h4, h5, h6{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Bebas Neue';
 }
 
 body{
-    font-family:  'Open Sans', sans-serif;
+    font-family:  'Titillium Web', sans-serif;
     text-align: center;
-    background-color:white;
-}
-
-
-img {
-    max-width: 100%;
-    height: auto;
+    background-color:black;
+    color: white;
 }
 
 html{
     scroll-behavior:smooth;
 }
 
-/* Titles */
+p{
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
 
 .heading{
-    font-size: 3rem;
-    font-weight: 700;
-    margin: 3rem 0;
-}
-
-.subheading{
-    font-size: 2rem;
-    font-weight: 100;
-
-}
-/* Sections */
-
-.black-section{
-    background-color: black;
-    color:white;
-}
-
-.grey-section{
-    background-color: #3d3d3d;
-    color: white;
-}
-.white-section{
-    background-image: url('../images/background-circles2.png');
-    background-size: cover;
-    color: black;
-}
-
-.section-div{
-    padding: 6% 12%;
-
-}
-/* Containers */
-.container-fluid{
-    padding: 2% 5%;
-}
+    font-size: 5.5rem;
+    margin: 0 5rem 0 0;
+    font-weight: 800;
+    }
 
 /* Navigation Bar */
 
-
-.navbar-img{
-    width: 6rem;
-    margin-left: 20%;
+.navbar-brand{
+    width: 7rem;
+    margin: 2rem 2rem;
 }
 
 .nav-item{
-    padding: 0 15px;
+    margin-right: 1rem;
+    font-size: 0.8rem;
 }
 
-
-.navbar-light .navbar-nav .nav-link{
-    font-size: 1.2rem;
-    font-weight: 400;
-    color: darkgray;
+.nav-line{
+    border-style: none solid none none;
+    border-width: 1px;
+    line-height: 1px;
+    margin-left: 2rem;
+    color: white;
+    display: inline;
 }
 
-.navbar-light:hover .navbar-nav:hover .nav-link:hover{
-    color: #fca311;
+.navbar-dark:hover .navbar-nav:hover .nav-link:hover{ 
+    color: #FF6700;
 }
 
-/* Title */
+/* Set the border color */
 
-.title-row{
-    padding-bottom: 12rem;
+.custom-toggler.navbar-toggler {
+border-color:none;
+border:none;}
+    
+/* Setting the stroke to green using rgb values (0, 128, 0) */
+/*     
+.custom-toggler 
+.navbar-toggler-icon {
+background-image: 
+url(
+"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(91, 67, 242, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+} */
+
+/* TITLE */
+
+
+#title img{
+    width: 40rem;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
-
-.title-img{
-    position: absolute;
-    padding: 10px 10px;
-    background-color: white;
-}
-
-.title-img1{
-    transform: rotate(-5deg);
-    width: 26rem;
-    right: 6vw;
-    top: -2rem;
-    bottom: auto;
-}
-
-.title-img2{
-    transform: rotate(5deg);
-    width: 30rem;
-    right: 8vw;
-    top: 9rem;
-    bottom: auto;
-
-}
-
-.title-img3{
-    transform: rotate(-5deg);
-    width: 25rem;
-    right: 5vw;
-    top: 21rem;
-    bottom: auto;
-
-}
-
-#homecarousel{
-    display: none;
-}
-
-.title-txt{
+#title div{
+    margin: 2.5rem 0 0 50%;
     text-align: left;
+    float: left; 
 }
 
-
-.title-name{
-    margin: 5rem 0 3rem 4%;
-    font-weight: 700;
-    font-size: 7vw;
+#title p{
+    margin: 0 5rem 2rem 0;
 }
 
-.title-description{
-    font-weight: 500;
-    font-size: 2.5vw;
-    margin-top: 4.5rem;
-    margin-bottom: 2%;
-    margin-left: 4%;
-    color: darkgray;
+hr{
+    width: 10rem;
+    height: 0.4rem;
+    margin: 1.5rem 0 3rem 0;
+    background-color: #FF6700;
 }
 
 /* About Us */
 
-.about-text{
-    padding: 0 15% 3% 15% ;
-    font-size: 1.5rem;
-    font-weight: 400;
-}
-
-
-.btn:hover{
-    color: #fca311;
-}
-
-#readmore{
-    display: none;
-}
-
-#LessBtn{
-    display: none;
-}
-/* Meet the Team */
-
-.meet-the-team{
-    margin: 2rem 0;
-}
-
-.team-img{
-    width: 12rem;
-    height: 12rem;
-    max-width: 20rem;
-    margin-bottom: 2rem;
-    border-radius: 50%;
-    border: solid white 6px;
-}
-
-.img-div:hover .team-img{
-    opacity: 0.2;
-}
-
-.img-div:hover .team-job{
-    opacity: 1;
-}
-
-.first-row{
-    margin: 0 20%;
-}
-.second-row{
-    margin: 0 8%;
-}
-.team-name{
-    font-weight: 400;
-    font-size: 1.3rem;
-}
-.team-role{
-    color:grey;
-    font-size: 1rem;
-    line-height: 1.3rem;
-    margin-bottom: 5rem;
-    text-align: center;
-
-}
-
-.team-job{
-    position: absolute;
-    top: 25%;
-    font-weight: 400;
-    left: 50%;
-    padding: 0 5%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-}
-
-
-/* Mission */
-
-#mission{
-    background-size: 150%;
-
-}
-.mission-title{
-    margin-bottom: 3rem;
-    font-weight: 500;
-}
-
-.mission-div{
-    padding: 3% 12%;
-}
-
-.mission-box{
-    margin-bottom: 5rem;
-    padding: 0 24%;
-}
-
-.mission-box-bottom{
-    margin-bottom: 2rem;
-}
-.mission-icon:hover{
-    color: #fca311;
-}
-.mission-aim{
-    font-weight: 800;
-    font-size: 2.5rem;
-}
-
-.mission-aim:hover{
-    color: #fca311;
-}
-
-/* Objectives */
-
-.objectives-title{
-    margin-bottom: 10px;
-    margin-top: 15px;
-}
-
-.objective-deck{
-    padding: 0 5% 5% 5%;
-    margin: 0 0;
-}
-
-.objective-icon{
-    margin-bottom: 5px;
-    color: black;
-}
-
-
-.objective-icon:hover{
-    margin-bottom: 5px;
-    color:#fca311;
-}
-
-.objective-card{
-padding: 20px 10px;
-border: solid 0;
-border-color: black;
-border-radius: 5%;
-background-color: transparent;
-}
-/* Testimonials */
-.testimonial-div{
-    padding: 0% 20% 5% 20%;
-}
-
-.testimonial-text{
-    font-size: 1.5rem;
-    line-height: 1.5;
-}
-
-
-.speech-icon{
-    background-color: #fca311;
-    width: 2rem;
-    display: inline-block;
-    border-radius: 100%;
-    padding: 8px;
-    margin-right: 10px;
-}
-
-.speech-icon-flip{
-    transform: scaleX(-1);
-
-    background-color: #fca311;
-    width: 2rem;
-    display: inline-block;
-    border-radius: 100%;
-    padding: 8px;
-    margin-left: 10px;
-}
-
-
-.gallery-div{
-    padding: 6% 4%;
-}
-
-
-.gallery-img{
-    opacity: 0.6;
-    padding: 0.5%;
-
-}
-
-.gallery-img:hover{
-    opacity: 1;
-}
-
-.btn-space{
-    margin-top: 1.5%;
-}
-/* Call To Action */
-
-.contact-div{
-    padding: 2% 8%;
-}
-
-.join-div{
-    margin-bottom: 5rem;
-}
-.contact-icon{
-    color: #fca311;
-}
-.cta-text{
-    font-size:  1.2rem;
-    font-weight: 600;
-}
-
-.cta-subtext{
-    margin-top: 0.8rem;
-    font-weight: 400;
-}
-/* Footer */
-
-#footer{
-    padding: 15px 0px;
-}
-
-.footer-icon{
-    color: #3d3d3d;
-    padding: 0px 10px;
-}
-
-.footer-icon:hover{
-    color: #fca311;
-}
-.footer-txt{
-    font-size: 0.6rem;
-    margin-top: 10px;
-}
-
-
-/*
-
-Archived code
-
-html
-<video src="/Users/sophie/Documents/Udemy/Web Development/The Blackett Lab Family/images/stockvideo_01837.mp4" autoplay muted loop>
-            </video>
-
-video {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: 0;
-    transform: translate(-50%, -50%);
-  } */
-
-
-  /* Animations */
-  .fade-in {
-    animation: fadeIn ease 3s;
-    -webkit-animation: fadeIn ease 3s;
-    -moz-animation: fadeIn ease 3s;
-    -o-animation: fadeIn ease 3s;
-    -ms-animation: fadeIn ease 3s;
-  }
-
-/* Media query */
-/* Tablets */
-@media (max-width: 989px){
-
-    #title #cta{
-        background-size: 150%;
-
-    }
-    .title-img{
-        display: none;
-    }
-
-    .title-txt{
-        text-align: center;
-    }
-
-    .title-name{
-        font-size: 4rem;
-        text-align: center;
-        margin-top: 1rem;
-        margin-left: 0;
-        text-align: center;
-
-    }
-
-
-    .title-description{
-        font-size: 2rem;
-        margin: 2rem 0 ;
-    }
-
-
-    .title-row{
-        margin-bottom: 2%;
-        padding-bottom: 0;
-    }
-
-    #homecarousel{
-        display: inline-block;
-        padding: 2% 5%;
-    }
-
-
-    .about-text{
-        font-size: 1.5rem;
-    }
-
-    .mission-div{
-        padding: 3% 10%;
-    }
-
-
-    .mission-title{
-        font-size: 1.3rem;
-        margin-left: 1%;
-        margin-right: 1%;
-    }
-
-
-    .testimonial-div{
-        padding: 0% 20% 10% 20%;
-
-     }
-
-    .cta-text{
-        font-size: 1.2rem;
-        margin: 0 7%;
-    }
-
-}
-
-/* Mobile */
-@media (max-width: 414px){
-    p{
-        font-size: 0.9rem;
-    }
-
-    .mission-box{
-        padding: 0 2%;
-    }
-    .title-name{
-        font-size: 3rem;
-        text-align: center;
-        margin-top: 2rem;
-
-    }
-    /* #To finish (sizing) & icon size too */
-    .mission-aim{
-        font-weight: 800;
-        font-size: 1.5rem;
-    }
-
-    .title-row{
-        margin-bottom: 2rem;
-        padding-bottom: 0;
-    }
-
-    #homecarousel{
-        display: inline;
-    }
-
-
-    .gallery-div{
-        padding: 15% 4%;
-    }
-
-    .team-job{
-        position: absolute;
-        top: 20%;
-    }
-
-
-    .title-description{
-        font-size: 1.5rem;
-        margin: 2rem 2rem ;
-    }
-
-    .team-img{
-        width: 8rem;
-        height: 8rem;
-        padding: 0 0;
-    }
-
-    .about-text, .mission-title, .cta-text .title-description {
-        font-size: 1rem;
-    }
-
-    .testimonial-text{
-        font-size: 1rem;
-    }
-
-
-    .testimonial-div{
-        padding: 0% 20% 15% 20%;
-
-     }
-    .mission-title{
-        padding: 0 0;
-    }
-
-    .mission-icon{
-        font-size: 4rem;
-    }
-    .find-us{
-        font-size: 1.5rem;
-    }
-
-    .cta-text{
-        font-size: 1rem;
-    }
-
-}
-
-  @keyframes fadeIn{
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-  @-moz-keyframes fadeIn {
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-  @-o-keyframes fadeIn {
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-  @-ms-keyframes fadeIn {
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-
- /* ---------------------------- */
-
-  /* Form.html */
-
-
-  #form{
-    padding: 0% 15%;
-}
-
-.intro{
-    padding: 2% 15%;
-}
-
-.form-title{
-    line-height: 3rem;
-    margin-top: 1rem;
-}
-
-.form-subtitle{
-    font-size: 1.2rem;
-    line-height: 2rem;
-    padding: 0 5% 2% 5%;
-}
-
-.form-label{
+#about div{
+    margin: 12.5rem 60%  5rem 5rem;
     text-align: left;
-}
-.form-div{
-   padding: 0 15%;
-}
-
-.form-group{
-    padding: 0% 5%;
-    margin-bottom: 2rem;
-
-}
-
-.form-label.required .control-label:after{
-    content:"*";color:#fca311;
-}
-
-.form-check-label{
-    font-size: 0.8rem;
-}
-
-.data-promise{
-    font-size: 1rem;
-    margin: 2.5rem 0 1.5rem 0;
-}
-
-.hyperlink{
-    color: darkgray;
-    word-break: break-word;
-}
-
-.hyperlink:hover{
-    color: #fca311;
-    text-decoration: none;
-}
-
-
-
-/* Tablets */
-
-@media (max-width: 989px){
-
-
-    /* Form css */
-
-
-    .form-title{
-        font-size: 3rem;
-        line-height: 2rem;
-        margin-bottom: 3rem;
-    }
-
-    .form-subtitle{
-        font-size: 1rem;
-        line-height: 1.5rem;
-        padding: 0 0.8% 2rem 0.8%;
-    }
-
-    .control-label{
-        font-size: 1rem;
-    }
-    .data-promise{
-        font-size: 1rem;
-        line-height: 1.5rem;
-
-    }
-
-    .btn{
-        font-size: 0.8rem;
-
-    }
-
-    .form-control{
-        font-size: 80%;
-    }
-}
-
-/* Mobile */
-
-@media (max-width: 414px){
-
-    .container-fluid{
-        padding: 2% 8%;
-    }
-
-    .form-title{
-        font-size: 2rem;
-        margin-bottom: 2rem;
-
-    }
-
-    h2.welcome{
-        font-size: 2rem;
-    }
-
-    #recaptcha{
-        transform:scale(0.7);
-        -webkit-transform:scale(0.7);
-        transform-origin:0 0;
-        -webkit-transform-origin:0 0;
-    }
-
-    .form-group{
-        margin-bottom: 1rem;
-    }
-    .recaptcha-label{
-        display:block;
-        padding: 0 0;
-    }
-
-}
-
-
-/*  Redirect pages CSS */
-/* #loader {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    background: rgba(0,0,0,0.75) url('../images/6.gif') no-repeat center center;
-    z-index: 10000;
-  }  */
-
-#loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #fca311; /* Blue */
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 2s linear infinite;
-    overflow: show;
-    margin: auto;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.8;
-    z-index: 10000;
-    position: fixed;
-    display: none;
-  }
-
-
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-
-  /* Redirect page CSS */
-
-  .redirect{
-      margin-bottom: 5%;
-
-  }
-
-  .redirect-link{
-      font-size: 0.8rem;
-      margin: 0 0 0 5%;
-      list-style-position: outside;
-  }
-
-  ul{
-      list-style: inside;
-      list-style-type: square;
-  }
-
-  .redirect-links{
-      margin: 5% auto;
-      text-align: left;
-  }
-
-  .list-item{
-      margin: 2% auto;
-  }
-
-.darkBox {
-  margin: 5% auto 0 auto;
-  padding: 5% 5%;
-  max-width: 800px;
-  background-color: black;
-  color: white;
-  word-break: break-word;
-}
-
-textarea.darkBoxSubBox {
-  background-color: white !important;
-  color: darkgrey !important;
-  margin: 1em 0;
-  resize: none;
-}
-
-a.darkBoxLink:link, a.darkBoxLink:visited {
-  color: #fca311;
-  text-decoration: none;
-}
-a.darkBoxLink:hover, a.darkBoxLink:active {
-  color: #fca311;
-  text-decoration: underline;
-}
-
-ul.centreList {
-  text-align: left;
-  display: table;
-  margin: 0 auto;
-  list-style-position: outside;
-  width: 80%;
-  padding: 0 0;
-
-}
-
-.notice {
-  color: #fca311;
-  font-weight: bold;
+    float: left;
 }
