--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5, h6{
     font-family: 'Bebas Neue';
+    font-weight: 800;
 }
 
 body{
@@ -15,21 +16,24 @@ html{
 
 p{
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
-
 
 .heading{
     font-size: 5.5rem;
     margin: 0 5rem 0 0;
-    font-weight: 800;
     }
+    
+.left-div{
+    margin: 12rem 0 0 5rem;
+    text-align: left;
+}
 
 /* Navigation Bar */
 
 .navbar-brand{
-    width: 7rem;
-    margin: 2rem 2rem;
+    width: 8rem;
+    margin: 3rem 3rem;
 }
 
 .nav-item{
@@ -46,6 +50,10 @@ p{
     display: inline;
 }
 
+.nav-icon{
+    margin-left: 0;
+    margin-right: 0;
+}
 .navbar-dark:hover .navbar-nav:hover .nav-link:hover{ 
     color: #FF6700;
 }
@@ -65,46 +73,63 @@ url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(91, 67, 242, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 } */
 
-/* TITLE */
 
+/* TITLE */
 
 #title img{
     width: 40rem;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
 }
-#title div{
-    margin: 2.5rem 0 0 50%;
+#title .header-div{
     text-align: left;
-    float: left; 
+}
+
+.blurred-edge{
+        background-image: url('../images/Yolanda Ohene.jpg');
+        width: 50%;
+        height: 90%;
+        background-repeat: no-repeat;
+        background-size:contain;
+        /* you need to match the shadow color to your background or image border for the desired effect*/
+        box-shadow: 16px 16px 16px 16px black inset;
+        position: absolute;
+        top: 30%;
+        left: 50px;
+        z-index: -10;
 }
 
 #title p{
-    margin: 0 5rem 2rem 0;
+    margin: 0 5rem 0 0;
 }
 
 hr{
     width: 10rem;
     height: 0.4rem;
-    margin: 1.5rem 0 3rem 0;
+    margin: 1.5rem auto 3rem 0;
     background-color: #FF6700;
 }
 
+
 /* About Us */
 
-#about div{
-    margin: 12.5rem 60%  5rem 5rem;
-    text-align: left;
-    float: left;
+#about{
+    background-image: url('../images/earth.jpg');
+    background-size: cover;
 }
+
+#about .left-div{
+    margin-right: 60%;
+    padding-bottom: 10rem;
+}
+
 #about p{
-    margin: 0 0 2rem 0;
+    padding:0 0 2rem 0;
+    margin-top: 0;
 }
 
 .button{
     font-size: 1.25rem;
     color:gray;
-    background-color: black;
+    background-color: rgba(0,0,0,0.05);
     padding: 0 0;
     border: none;
 }
@@ -122,3 +147,66 @@ hr{
 }
 
 /* Meet The Team */
+
+.device{
+    background-image: url('../images/TBLF_Graphic\ Device_RGB.png');
+    background-size: contain;
+    width: 50%;
+    height: 100%;
+    background-repeat: no-repeat;
+}
+
+#meet-the-team .left-div{
+    margin: 0 0  0 5rem;
+}
+
+#meet-the-team .row{
+    margin-top: 10rem;
+}
+.team-img{
+    width: 12rem;
+    height: 12rem;
+    max-width: 20rem;
+    margin-bottom: 2rem;
+    border-radius: 50%;
+    border: solid white 6px;
+}
+
+.name{    
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.role{
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+/* Footer */
+
+#footer{
+    margin: 4rem 0;
+}
+
+#footer .footer-icon{
+    margin: 2rem 1rem;
+    color: white;
+}
+
+#footer .footer-icon:hover{
+    color: #FF6700;
+}
+
+#footer p{
+    font-size: .6rem;
+}
+/* Mission */
+
+#mission .mission-div{
+    padding: 0 5rem 0 7rem;
+    text-align: left;
+}
+
+#mission .icon-div{
+    width: 10%;
+}
