--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body{
     text-align: center;
     background-color:black;
     color: white;
-    padding-top: 10%; /* For the sticky navbar */
+    padding-top: 0%; /* For the sticky navbar */
 }
 
 html{
@@ -33,10 +33,13 @@ h4, h5, h6, p{
     font-weight: 800;
     margin: 0 2rem 0 0;  /* for the horizontal line underneath */
     }
-    
+
+.heading-div p{
+    margin-bottom: 1rem;}
+
 .shell{
     text-align: left;
-    padding: 1rem 0;
+    padding: 1rem 2rem;
 }
 
 .device-box{
@@ -78,15 +81,14 @@ h4, h5, h6, p{
 }
 
 /* State styling */
+.heading-div{
+    margin: 6rem 10% 2rem 0rem;
+    text-align: left;}
 
 .subtext{
     font-weight: 400;
 }
 
-.heading-div{
-    margin: 8rem auto 0 2rem;
-    text-align: left;}
-    
 .center-div{
     text-align: center;}
      
@@ -106,7 +108,7 @@ h4, h5, h6, p{
     overflow: hidden;
     background-color: rgba(0,0,0,.1);
     z-index: 1000000;
-    padding: 0 2rem;
+    padding: 0rem 2rem;
   }
   
   /* Navbar links
@@ -122,7 +124,7 @@ h4, h5, h6, p{
   /* The sticky class is added to the navbar with JS when it reaches its scroll position */
  .sticky {
     position: fixed;
-    top: 0;
+    top: 0rem;
     width: 100%;
   }
   
@@ -172,22 +174,20 @@ url(
 /* Title */
 
 .header .heading-div{
-    margin: 3rem 2rem 0rem 2rem;
+    margin: 5rem 15% 0rem 2rem;
 
 }
 .header-image{
         background-image: url('../images/header.jpg');
-        width: 100%;
         height: 300px;
         background-repeat: no-repeat;
-        background-size:contain;
+        background-size:cover;
         /* you need to match the shadow color to your background or image border for the desired effect*/
-        margin: 8rem auto 0 2rem ;
+        margin: 8rem 2rem 0 2rem ;
         top: 10%;
+        border-radius: 5px;
 }
 
-.heading-div p{
-    margin-bottom: 1rem;}
 
 hr{
     width: 10rem;
@@ -203,8 +203,9 @@ hr{
     background-size: cover;
 }
 
+    
 .about .inner-div{
-    margin: 0 0;
+    margin: 0 10% 0 auto ;
 }
 
 .about p{
@@ -234,49 +235,63 @@ hr{
 
 /* Meet The Team */
 
-.meet-the-team .heading-div{
-margin-top: 0;}
+.mobile-only .float-div .image{
+margin-left: 0rem;
+}
 
-.float-div{
-    float: right;
+.web-only{
+    display: none;
+}
+.flex-box{
+display: flex;
     text-align: left;
+    align-items:center;
+    margin: 3rem 0;
 }
 
-.name{    
-    font-size: 2rem;
-    font-weight: 800;
-    margin:  5rem 2rem 0 0 ;
-    padding: 0 0 0 1rem;
+.image{
+    width: 40%; 
+    margin:  0 0;
+    padding: 0 0;
+
 }
+.name{    
+    font-size: 1.3rem;
+    font-weight: 800;
+    margin: 0 0 0 1rem;
+}
+
 
 .role{
+    font-size: 90%;
     font-weight: 400;
-    margin: 0  2rem 0 0;
-    padding: 0 0 0 1rem;
+    margin-left: 1rem;
+
+
 
 }
 
 /* Mission */
 
 .mission-div{
-    padding: 0 0 0 7rem;
-    margin-bottom: 5rem;
+    margin: 0rem 2rem 5rem 2rem;
     display: inline-block;
     white-space: nowrap;
 }
 
 .mission-card{
-    margin: 5rem 0;
+    margin: 0 0 4rem 0;
     white-space: normal;
-    vertical-align: middle;
+    text-align: left;
+
 }
 
 .mission-icon  {
 float: left;    
-max-width:50%;
-max-height:50%;
-width: 6rem;
-margin: 0 2rem 0 0;
+width: 5rem;
+vertical-align: middle;
+margin: 2rem 2rem 2rem 0;
+height: 100%;
 }
 
 .obj-icon{
@@ -284,20 +299,23 @@ margin: 0 2rem 0 0;
     width: 8rem;
 }
 
-.represent{
-    padding: 2rem 0 0 0;
+.center-div.obj-div{
+    margin-bottom: 2rem;
 }
+
 
 .mission .heading-div h3{
     font-family: Titillium Web;
 }
 
 .mission-title{
+    font-size: 1.3rem;
     font-weight: 800;
     margin-bottom: 0;
 }
 
 .mission-text {
+    font-size: 90%;
 font-weight: 400;
 } 
 
@@ -308,10 +326,6 @@ font-weight: 400;
     background-color: white;
     color: black;
 }
-
-.gallery-div{
-    padding: 8em 5rem 0 5rem;
-    }
 
 .speech-icon{
     width: 1rem;
@@ -324,11 +338,12 @@ font-weight: 400;
 .testimonial-text{
     font-family: Titillium Web;
     font-weight: 600;
-    font-size: 1.6rem;
+    font-size: 1rem;
 }
 
+
 .carousel-inner .container-fluid{
-    padding: 2rem 2rem;
+    padding: 0 0rem 2rem 0rem;
 }
 
 .carousel-indicators li{
@@ -353,11 +368,11 @@ ol.carousel-indicators{
 }
 
 .curator-box{
-padding: 5rem 5rem;
+padding: 3rem 0rem;
 }
 
 .find-us{
-    padding: 5rem 0;
+    padding: 3rem 0;
 }
 
 .find-us h3{
@@ -366,8 +381,7 @@ padding: 5rem 5rem;
  /* CTA */
 
 .cta-div .heading{
-     padding: 4rem 0 ;
-     font-size: 2rem;
+    padding: 4rem 0 ;
     margin: 0 0; }
 
  .cta-outer{
@@ -376,8 +390,9 @@ padding: 5rem 5rem;
 
 .cta-div{
      background-color: rgb(41, 41, 41);
-     height: 550px;
-     bottom: 10rem;
+     height: 100%;
+     padding-bottom: 2rem;
+     bottom: 2rem;
      overflow: hidden;
      margin: 0 auto;
      width: 80%;
@@ -386,7 +401,7 @@ padding: 5rem 5rem;
  }
 
 .cta-div .inner{
-     padding: 0 4rem;
+     padding: 0rem 1rem 2rem 1em;
  }
 
 .white-border-round{
@@ -411,12 +426,13 @@ padding: 5rem 5rem;
     color: black;
     text-align: center;
     border-radius: 6px;
-    padding: 2rem 2rem;
+    padding: 1rem 1rem;
     position: absolute;
-    z-index: 1;
-    bottom: 110%;
+    font-size: 80%;
+    z-index: 101;
+    bottom: 60%;
     left: 60%;
-    margin-left: -50%;
+    margin-left: -55%;
   }
 
 .popup-button  .popup-text::after {
@@ -429,7 +445,6 @@ padding: 5rem 5rem;
     border-style: solid;
     border-color: white transparent transparent transparent;
   }
-
 
   .popup-button .show {
     visibility: visible;
@@ -460,6 +475,7 @@ padding: 5rem 5rem;
 .footer{
     color: white;
     padding: 0 0;
+    margin-bottom: 2rem;
 }
 
 .white-border-round a{
@@ -511,6 +527,15 @@ font-size: 1rem;}
 /* Responsiveness */
 
 @media (min-width:768px){
+    .mobile-only{
+        display: none;
+    }
+
+    .web-only{
+        display: initial;
+    }
+
+    body{padding-top: 10%;}
     .heading{
         font-size: 5rem;
         margin: 0 5rem 0 0;
@@ -519,6 +544,8 @@ font-size: 1rem;}
             margin: 8% 2rem 0rem auto;
         
         }
+        .heading-div{
+            margin: 8rem auto 0 2rem;}
 
         .header-image{
             background-image: url('../images/header.jpg');
@@ -553,4 +580,20 @@ font-size: 1rem;}
         font-size: 1.2rem;}
 
         .maintext{font-size: 1.3rem;}
+
+     .gallery .heading-div{
+            padding: 8em 5rem 0 5rem;
+            }
+ 
+    .name{
+        font-size: 2rem;
+        margin:  5rem 2rem 0 1rem ;
+
+    }
+    .role{
+        font-weight: 400;
+        margin: 0  2rem 0 0;
+        padding: 0 0 0 1rem;
+    
+    }
 }
