--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ html{
     scroll-behavior:smooth;
 }
 
+img{
+    max-width: 100%;
+}
+
 h4, h5, h6, p{
     font-weight: 600;
     font-size: 1rem;
@@ -250,7 +254,7 @@ display: flex;
 }
 
 .image{
-    width: 40%; 
+    width: 30%; 
     margin:  0 0;
     padding: 0 0;
 
@@ -274,7 +278,6 @@ display: flex;
 /* Mission */
 
 .mission-div{
-    margin: 0rem 2rem 5rem 2rem;
     display: inline-block;
     white-space: nowrap;
 }
@@ -327,6 +330,9 @@ font-weight: 400;
     color: black;
 }
 
+.col-3{
+    flex: 0 0 0%;
+}
 .speech-icon{
     width: 1rem;
 }
@@ -340,7 +346,6 @@ font-weight: 400;
     font-weight: 600;
     font-size: 1rem;
 }
-
 
 .carousel-inner .container-fluid{
     padding: 0 0rem 2rem 0rem;
@@ -376,7 +381,8 @@ padding: 3rem 0rem;
 }
 
 .find-us h3{
-    font-weight: 400;
+    font-weight: 800;
+    font-size: 1.3rem;
 }
  /* CTA */
 
@@ -502,19 +508,23 @@ padding: 3rem 0rem;
 /* Join Us Page */
 
 .shell.form{
-    width: 50%;
+    width: 100%;
     margin-bottom: 0rem;
     padding-bottom: 0;
 }
 
+.form .heading{
+    margin-top: 5rem;
+}
 .form-group .paragraph{
 margin-bottom: 3rem;
 }
 
+
 .form-group .subparagraph{
 font-weight: 400;    
-font-size: 1rem;}
-
+font-size: 80%;
+}
 .form a{
     margin: 0 0.5rem;
     color: white;
@@ -532,68 +542,161 @@ font-size: 1rem;}
     }
 
     .web-only{
-        display: initial;
-    }
+        display: block;}
 
     body{padding-top: 10%;}
     .heading{
-        font-size: 5rem;
-        margin: 0 5rem 0 0;
+        font-size: 4.5rem;
+        margin: 0 2rem 0 0;
         }
+
     .header .heading-div{
-            margin: 8% 2rem 0rem auto;
+            margin: 8% 4rem auto 60%;
         
         }
+
         .heading-div{
-            margin: 8rem auto 0 2rem;}
+            margin: 8rem 10% 0 auto;}
 
         .header-image{
             background-image: url('../images/header.jpg');
             width: 50%;
-            height: 80%;
+            height: 35rem;
             background-repeat: no-repeat;
             background-size:cover;
             /* you need to match the shadow color to your background or image border for the desired effect*/
-            box-shadow: 16px 16px 16px 16px black inset;
             position: absolute;
-            top: 30%;
-            left: 50px;
-            z-index: -10;
+            left: 2rem;
     }
 
     .navbar-brand{
         width: 8rem;
-        margin: 0 0 0 3rem;
+        margin: 0 0 0 2rem;
         padding: 3rem 0;
     }
     
-    .about .inner-div{
-        margin: 0 50% 0 auto;
-    }
+
     .shell{
-        margin: 8rem 5rem;
         text-align: left;
-        padding: 2rem 0;
+        padding: 4rem 4rem;
+    }
+
+    .flex-box{
+        padding-top: 5rem;
     }
 
     h4, h5, h6, p{
         font-size: 1.2rem;}
 
-        .maintext{font-size: 1.3rem;}
+    .maintext{font-size: 1.3rem;}
 
-     .gallery .heading-div{
-            padding: 8em 5rem 0 5rem;
-            }
- 
+
+
+    .about .heading-div{
+                margin-right: 50%;
+                }
+     
     .name{
-        font-size: 2rem;
+        font-size: 1.3rem;
         margin:  5rem 2rem 0 1rem ;
 
     }
     .role{
         font-weight: 400;
+        font-size: 1rem;
         margin: 0  2rem 0 0;
         padding: 0 0 0 1rem;
     
     }
+    .image{
+        width: 10rem;
+        margin:  0 0;
+        padding: 0 0;
+    
+    }
+    .mission-div{
+        margin: 0 0;
+        padding: 0 0;
+
+    }
+    .mission-icon{
+        width: 8rem;
+        padding: 0rem  0;
+        margin: 0 4rem 0 0;
+    }
+    .mission-title{
+        font-size: 1.3rem;
+    }
+    
+    .mission-text {
+        font-size: 1.2rem;
+    } 
+
+
+.testimonial-text{
+    font-size: 1.2rem;
+}
+.gallery-div{
+    padding: 8em 0rem 0 0rem;
+    }
+
+    .cta-div .inner{
+        padding: 0rem 3rem 1rem 3rem;
+    }
+
+    .add-seperator{
+        border-style: none solid none none;
+        border-color: white;
+        border-width: 2px;
+    }
+
+
+    .popup-button .popup-text {
+        visibility: hidden;
+        width: 90%;
+        background-color: white;
+        color: black;
+        text-align: center;
+        border-radius: 6px;
+        padding: 1rem 1rem;
+        position: absolute;
+        font-size: 1rem;
+        z-index: 101;
+        bottom: 10%;
+        left: 60%;
+        margin-left: -55%;
+      }
+    
+    .popup-button  .popup-text::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 10px;
+        border-style: solid;
+        border-color: white transparent transparent transparent;
+      }
+    
+
+
+.form .heading{
+    margin-top: 5rem;
+}
+.form-group .paragraph{
+margin-bottom: 3rem;
+}
+
+.form-group .subparagraph{
+font-weight: 400;    
+font-size: 1rem;}
+
+.form a{
+    margin: 0 0.5rem;
+    color: white;
+}
+
+.form a:hover{
+    color: #FF6700;
+}
 }
