--- a/css/styles.css
+++ b/css/styles.css
@@ -49,12 +49,13 @@ h4, h5, h6, p{
 .device-box{
     background-image: url('../images/graphic_device.png');
     background-size: cover;
-    width: 10%;
+    width: 25%;
     height: 100%;
     background-repeat: no-repeat;
     position: absolute; /* or absolute */
-    top: 90rem;
-    right:0;
+    top: 80rem;
+    right: 0px;
+    z-index: -1;
 
 }
 
@@ -65,21 +66,21 @@ h4, h5, h6, p{
 .device-box-mid{
     top: 130rem;
     left:0;
-    width: 16%;
+    width: 20%;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
 
 .device-box-low{
-    top: 200rem;
-    right:0;
-    width: 12%;
+    top: 180rem;
+    right: 0px;
+    width: 20%;
 }
 
 .device-box-cta{
     top: 250rem;
     left:0;
-    width: 16%;
+    width: 30%;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
@@ -181,6 +182,10 @@ url(
     margin: 5rem 15% 0rem 2rem;
 
 }
+
+.header .heading{
+    font-size: 3.8rem;
+}
 .header-image{
         background-image: url('../images/header.jpg');
         height: 300px;
@@ -203,8 +208,9 @@ hr{
 /* About Us */
 
 .about{
-    background-image: url('../images/earth.jpg');
-    background-size: cover;
+    background-image: url('../images/ramon-salinero.jpg');
+    background-size: contain;
+    background-repeat: repeat-x;
 }
 
 .about .inner-div{
@@ -294,7 +300,7 @@ display: flex;
 
 .mission-icon  {
 float: left;    
-width: 5rem;
+width: 4rem;
 vertical-align: middle;
 margin: 1rem 2rem 2rem 0;
 height: 100%;
@@ -302,11 +308,12 @@ height: 100%;
 
 .obj-icon{
     padding: 2.5rem 2rem;
-    width: 8rem;
+    width: 7.5rem;
 }
 
-.center-div.obj-div{
+.obj-div {
     margin-bottom: 2rem;
+
 }
 
 
@@ -384,7 +391,7 @@ padding: 3rem 0rem;
 }
 
 .find-us h3{
-    font-weight: 800;
+    font-weight: 400;
     font-size: 1.3rem;
 }
  /* CTA */
@@ -613,17 +620,20 @@ font-weight: bold;
     .web-only{
         display: block;}
 
-    body{padding-top: 10%;}
+    body{padding-top: 6%;}
     .heading{
-        font-size: 4.5rem;
+        font-size: 5rem;
         margin: 0 2rem 0 0;
         }
 
     .header .heading-div{
             margin: 8% 4rem auto 60%;
-        
         }
 
+    .header .heading{
+        font-size: 5.5rem;
+
+    }
         .heading-div{
             margin: 8rem 10% 0 auto;}
 
@@ -655,24 +665,27 @@ font-weight: bold;
     }
 
     h4, h5, h6, p{
-        font-size: 1.2rem;}
+        font-size: 1.3rem;}
 
-    .maintext{font-size: 1.3rem;}
+    .maintext{font-size: 1.5rem;}
 
 
-
+        .about{
+            background-repeat: no-repeat;
+        background-size:cover;
+        }
     .about .heading-div{
                 margin-right: 50%;
                 }
      
     .name{
-        font-size: 1.3rem;
+        font-size: 1.6rem;
         margin:  5rem 2rem 0 1rem ;
 
     }
     .role{
         font-weight: 400;
-        font-size: 1rem;
+        font-size: 1.2rem;
         margin: 0  2rem 0 0;
         padding: 0 0 0 1rem;
     
@@ -689,24 +702,33 @@ font-weight: bold;
 
     }
     .mission-icon{
-        width: 6rem;
+        width: 5rem;
         padding: 1rem  0;
         margin: 0 4rem 0 0;
     }
     .mission-title{
-        font-size: 1.3rem;
+        font-size: 1.6rem;
     }
     
     .mission-text {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     } 
 
+    .obj-icon{
+        width: 8rem;
+        height: 9rem;
+    }
+
+
+   
+    }
     .represent{
         margin: 1rem 4rem 2rem 0;
     }
 
     .testimonial-text{
-        font-size: 1.2rem;
+        font-size: 1.3rem;
+        padding: 0 3rem;
     }
     .gallery-div{
         padding: 8em 0rem 0 0rem;
@@ -743,21 +765,17 @@ font-size: 1rem;}
     color: #FF6700;
 }
 
-.find-us h3{
-    font-size: 1.6rem;
-}
-
 
 .popup-button .popup-text {
-   font-size: 0.8rem;
+   font-size: 1rem;
    bottom: 110%;
    left: 63%;
    width: 85%;
   }
 
-  .navbar{    background-color: rgba(0,0,0,.1);
-}
-
+  
+.find-us h3{
+font-size: 1.8rem;}
 .redirect{margin-top: 5rem;}
 
 
